# mirdata

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  mirdata_test.ipynb  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/: environment-ci.yml  environment-lint.yml
docs/: .readthedocs.yml  conf.py  index.rst  requirements.txt
mir_dataset_loaders/: __init__.py  beatles.py  download_utils.py  ikala.py  load_utils.py  maps.py  medleydb_melody.py  medleydb_pitch.py  orchset.py  salami.py  utils.py  validate.py
mir_datasets/: version.py
mirdata/: __init__.py  __main__.py  acousticbrainz_genre.py  adhoc_h5.py  annotations.py  beatles.py  beatport_key.py  cante100.py  classes.py  core.py  dali.py  dataset.py  download_utils.py  giantsteps_key.py  giantsteps_tempo.py  giantsteps_tempo_remotes.py  groove_midi.py  gtzan_genre.py  guitarset.py  ikala.py  initialize.py  io.py  irmas.py  jams_utils.py  load.py  maestro.py  maps.py  medley_solos_db.py  medleydb_melody.py  medleydb_pitch.py  mridangam_stroke.py  msd.py  orchideasol.py  orchset.py  phenicx_anechoic.py  rwc_classical.py  rwc_genre.py  rwc_jazz.py  rwc_popular.py  salami.py  (+8 more)
notebooks/: make_ikala_index.ipynb  make_orchset_index.ipynb
scripts/: make_4mula_tiny_index.py  make_acousticbrainz_genre.py  make_baf.py  make_baf_index.py  make_ballroom_index.py  make_beatles_index.py  make_beatport_key.py  make_billboard_index.py  make_brid_index.py  make_candombe_beat_downbeat_index.py  make_candombe_index.py  make_cante100_index.py  make_cipi_index.py  make_classicalDB.py  make_compmusic_carnatic_rhythm.py  make_compmusic_carnatic_varnam_index.py  make_compmusic_hindustani_rhythm.py  make_compmusic_iamms_index.py  make_compmusic_indian_tonic.py  make_compmusic_jingju_acappella.py  make_compmusic_otmm_makam_index.py  make_compmusic_raga_index.py  make_cuidado_index.py  make_da_tacos.py  make_dagstuhl_choirset_index.py  make_dali_index.py  make_egfxset_index.py  make_egset12_index.py  make_emvd_index.py  make_filosax_index.py  make_fma_keys_index.py  make_fmakv2_index.py  make_four_way_tabla_index.py  make_freesound_one_shot_index.py  make_giantsteps_key.py  make_giantsteps_tempo.py  make_good_sounds.py  make_groove_midi_index.py  make_gtzan_genre_index.py  make_gtzan_genre_mini_index.py  (+48 more)
tests/: conftest.py  test_acousticbrainz_genre.py  test_core.py  (+57 more)
(+890 files in other folders)
