[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirdata"
dynamic = ["version"]
description = "Common loaders for MIR datasets."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["mir", "dataset", "loader", "music"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "attrs>=23.1.0",
    "chardet>=5.0.0",
    "Deprecated>=1.2.14",
    "h5py>=3.7.0",
    "librosa>=0.10.1",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "pretty_midi>=0.2.10",
    "pyyaml>=6.0",
    "openpyxl>=3.0.10",
    "requests>=2.31.0",
    "scipy>=1.7.3",
    "tqdm>=4.66.1",
    "smart_open[all]>=5.0.0",
]

[tool.setuptools.package-data]
'mirdata' = ['datasets/indexes/*.json']

[project.optional-dependencies]
tests = [
    "decorator>=5.1.1",
    "attrs>=23.1.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "pytest-pep8>=1.0.6",
    "pytest-mock>=3.10.0",
    "pytest-localserver>=0.7.1",
    "testcontainers>=2.3",
    "future>=0.18.3",
    "coveralls>=3.3.1",
    "types-PyYAML",
    "types-chardet",
    "black>=23.3.0",
    "flake8>=5.0.4",
    "mypy>=0.982",
    "mir_eval>=0.7",
    "types-Deprecated"  # ensure type stubs for Deprecated are installed
]
docs = [
    "numpydoc",
    "recommonmark",
    "sphinx>=3.4.0",
    "sphinxcontrib-napoleon",
    "sphinx_rtd_theme",
    "sphinx-togglebutton",
    "sphinx-copybutton",
]
compmusic_hindustani_rhythm = ["openpyxl==3.0.10"]
dali = ["dali-dataset==1.1"]
compmusic_carnatic_rhythm = ["openpyxl==3.0.10"]
haydn_op20 = ["music21==6.7.1"]
cipi = ["music21==6.7.1"]
gcs = ["smart_open[gcs]"]
s3 = ["smart_open[s3]"]
http = ["smart_open[http]"]

[project.urls]
Homepage = "https://github.com/mir-dataset-loaders/mirdata"
Documentation = "https://mirdata.readthedocs.io/en/stable/"
Issues = "https://github.com/mir-dataset-loaders/mirdata/issues"
Releases = "https://github.com/mir-dataset-loaders/mirdata/releases"
